assets/styles/pages/things/available-things.less
/* #available-things {

  //…
background-color: whitesmoke;
text-decoration-color: blue;
/////////////////////////
}
 */

 #available-things {
  .page-header {
    .page-header();
  }

  .listings {
    max-width: 1000px;
    margin: 0 auto;
    column-width: 230px;
    column-gap: 5px;
    margin-bottom: 100px;
    column-count: 2;
    .card {
      break-inside: avoid;
      margin-bottom: 5px;
      padding: 5px;
      position: relative;
      img {
        display: block;
        width: 100%;
        height: auto;
        margin-bottom: 10px;
        position: relative;
        z-index: 10;
      }
      .card-options {
        position: absolute;
        top: 15px;
        right: 15px;
        z-index: 50;
        .options-toggle, .options-button {
          width: 30px;
          height: 30px;
          line-height: 30px;
          text-align: center;
          display: inline-block;
          cursor: pointer;
          font-size: 22px;
          color: @text-normal;
          background-color: rgba(255, 255, 255, 0.5);
          border-radius: 3px;
          opacity: 0;
          transition: all 250ms;
          &.borrow {
            font-size: 18px;
          }
          &:hover {
            background-color: rgba(255, 255, 255, 0.7);
          }
        }
        .dropdown-menu {
          .dropdown-item {
            cursor: pointer;
          }
        }
      }
      &:hover {
        .card-options {
          .options-toggle, .options-button {
            opacity: 1;
          }
        }
      }
      &.not-available {
        opacity: 0.6;
        background-color: darken(@accent-white, 4%);
      }
    }
  }

  .empty {
    border-top: 1px solid @border-lt-gray;
    padding-top: 25px;
  }
  .photo-uploader {
    // padding: 5px;
    .photo-upload-field {
      min-height: 150px;
      .file-upload-button {
        position: relative;
        cursor: pointer;
        .file-input {
          opacity: 0;
          width: 100%;
          height: 100%;
          top: 0px;
          left: 0px;
          position: absolute;
          cursor: pointer;
        }
      }

      .photo-preview {
        .image-wrapper {
          background-color: @bg-lt-gray;
          width: 100%;
          img {
            width: 100%;
          }
          .placeholder-icon {
            color: @text-muted;
            font-size: 42px;
          }
        }
      }

      .image-advice {
        margin-top: 15px;
        font-size: 13px;
        line-height: 16px;
      }
    }
    &.empty {
      .image-wrapper {
        min-height: 150px;
      }
    }
  }

  .item-preview {
    .card {
      padding: 10px;
      width: 100%;
      max-width: 250px;
      img {
        width: 100%;
        height: auto;
      }
    }
  }

  .field-wrap {
    position: relative;
    .datepicker-wrapper {
      .form-control {
        padding-left: 50px;
      }
    }
    .datepicker-label {
      position: absolute;
      top: 9px;
      left: 10px;
      font-size: 14px;
    }
  }

  @media (max-width: 550px) {
    .listings .card .card-options {
      .options-toggle, .options-button {
        opacity: 1;
      }
    }
  }
}

